--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ a {
 }
 
 html {
-  background: linear-gradient(to bottom left, rgb(9, 9, 9), rgb(101, 6, 84) );
+  background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
 }
 
 
