--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ html {
   font-size: 10px;
   /* Remplacez EMPLACEMENT par la valeur de la propriété font-family obtenue
      depuis Google Fonts */
-  font-family: font-family: "Fjalla One", sans-serif;
+    font-family: "Fjalla One", sans-serif;
 }
 
 h1,
