--- a/styles/style1.css
+++ b/styles/style1.css
@@ -4,7 +4,7 @@ html {
   font-size: 10px;
   /* Remplacez EMPLACEMENT par la valeur de la propriété font-family obtenue
      depuis Google Fonts */
-  font-family: font-family: "Fjalla One", sans-serif;
+  font-family: "Fjalla One", sans-serif;
 }
 
 h1,
@@ -22,7 +22,7 @@ h2 {
 }
 
 p {
-  color: rgb(101, 7, 84);
+  color: black;
   font-size: 22px;
   line-height: 2;
   letter-spacing: 1px;
@@ -36,16 +36,22 @@ li {
 
 }
 
-a {
+a {  
+  font-size: 60px;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: <700>;
+  font-style: normal;
+  margin: 0;
+  padding: 20px 0;
   color: rgb(101, 6, 84);
   text-shadow: 3px 3px 1px black;
+  
 }
 
 html {
-  background: linear-gradient(to bottom left, rgb(9, 9, 9) 50%, rgb(101, 6, 84) 50%);
+  background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
 }
-
-
 
 body {
   width: 600px;
@@ -61,4 +67,21 @@ img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
+}
+
+.trolls {
+      text-align: center;
+}
+
+span {
+  color: black;
+  font-size: 22px;
+  line-height: 2;
+  letter-spacing: 1px;
+  font-family: "Fjalla One";
+  text-shadow: none;
+}
+
+#Suivant {
+  text-align: right: ;
 }
