--- a/styles/style1.css
+++ b/styles/style1.css
@@ -82,12 +82,12 @@ img {
 }
 
   @media screen and (max-width: 600px) {
-  p {
+  p,
+  span {
     font-size: 1.5rem;
     }
   h1,
   h2 {
     font-size: 3rem;
      }
-
 }
