--- a/styles/style1.css
+++ b/styles/style1.css
@@ -7,8 +7,8 @@ html {
   font-family: "Fjalla One", sans-serif;
 }
 
-h1,
-h2 {
+h1,h2,
+h3 {
   font-size: 60px;
   text-align: center;
   font-family: "Dancing Script", cursive;
