--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,19 +1,25 @@
 html {
-  /* px signifie "pixels". La taille de police de base est maintenant de 10
-     pixels de haut */
+  background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
   font-size: 22px;
-  /* Remplacez EMPLACEMENT par la valeur de la propriété font-family obtenue
-     depuis Google Fonts */
   font-family: "Fjalla One", sans-serif;
 }
 
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: darkslategrey;
+  padding: 1em;
+  border: 5px solid black;
+}
+
+
 h1,h2,
 h3 {
-  font-size: 60px;
+  font-size: 3rem;
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
-  font-weight: <700>;
+  font-weight: bold;
   font-style: normal;
   margin: 0;
   padding: 20px 0;
@@ -23,29 +29,30 @@ h3 {
 
 p {
   color: black;
-  font-size: 22px;
   line-height: 2;
   letter-spacing: 1px;
   
 }
 
 li {
-  font-size: 22px;
   line-height: 2;
   letter-spacing: 1px;
 
 }
 
+
+
 span {
   color: black;
-  font-size: 22px;
+  font-size: 1rem;
   line-height: 2;
   letter-spacing: 1px;
   font-family: "Fjalla One";
   text-shadow: none;
 }
+
 a {  
-  font-size: 60px;
+  font-size: 3rem;
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
   font-weight: <700>;
@@ -56,20 +63,6 @@ a {
   text-shadow: 3px 3px 1px black;
   
 }
-
-html {
-  background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
-}
-
-body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: darkslategrey; 
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-}
-
-
 
 img {
   display: block;
@@ -80,14 +73,25 @@ img {
 .trolls {
       text-align: center;
 }
+.pct {
+  display: block;
+  float: left;
+  margin-top: -55px
+}
+
+.svt {
+  display: block;
+  float: right;
+  margin-top: -55px;
+}
 
   @media screen and (max-width: 600px) {
   p,
   span {
     font-size: 2rem;
-    }
+       }
   h1,
   h2 {
-    font-size: 4rem;
+    font-size: 3rem;
      }
 }
