--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,16 @@
 html {
   font-size: 22px;
     font-family: "Fjalla One", sans-serif;
+    background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
 }
 
-
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: darkslategray; 
+  padding: 1em;
+  border: 5px solid black;
+}
   
 
 h1,
@@ -36,21 +43,6 @@ li {
 a {
   color: black
 }
-
-html {
-  background: linear-gradient(to bottom right, rgb(9, 9, 9), rgb(101, 6, 84) );
-}
-
-
-
-body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: darkslategray; 
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-}
-
 
 
 img {
