--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,6 @@ body {
   border: 5px solid black;
 }
   
-
 h1,
 h2 {
   font-size: 3rem;
@@ -22,7 +21,7 @@ h2 {
   font-weight: <700>;
   font-style: normal;
   margin: 0;
-  padding: 20px 0;
+  padding: 20px 20px;
   color: rgb(101, 6, 84);
   text-shadow: 3px 3px 1px black;
 }
