--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ h2 {
   text-align: center;
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
-  font-weight: <700>;
+  font-weight: bold;
   font-style: normal;
   margin: 0;
   padding: 20px 20px;
   color: rgb(101, 6, 84);
-  text-shadow: 3px 3px 1px black;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
 }
 
 p {
