--- a/styles/style1.css
+++ b/styles/style1.css
@@ -16,7 +16,7 @@ a {
   font-family: "Dancing Script", cursive;
   font-style: normal;
   color: rgb(101, 6, 84);
-  text-shadow: 3px 3px 1px black;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
   text-decoration: none;  
 }
 
@@ -31,7 +31,7 @@ h3 {
   margin: 0;
   padding: 20px 20px;
   color: rgb(101, 6, 84);
-  text-shadow: 3px 3px 1px black;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
 }
 
 p {
@@ -72,12 +72,21 @@ img {
 
 .pct, .svt {
   display: block;
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.5);
+  padding: 3px;
   border: 2px solid black;
   text-align: center;
   border-radius: 10PX;
   background: linear-gradient(to bottom right, rgb(9, 9, 9, 0.5), rgb(101, 6, 84) );
 }
 
+a:hover {
+  opacity: 0.5;
+}
+
+.bouton:hover {
+  opacity: 0.5;
+}
 
 
   @media screen and (max-width: 600px) {
@@ -90,3 +99,4 @@ img {
     font-size: 3rem;
      }
 }
+
